--- a/index.html
+++ b/index.html
@@ -331,4 +331,22 @@
             });
         }
     });
+
+    {
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "Neo Services",
+  "image": "https://neoservices.me/assets/images/technician.png",
+  "address": {
+    "@type": "641605",
+    "addressLocality": "Tirupur",
+    "addressRegion": "Tamil Nadu",
+    "addressCountry": "India"
+  },
+  "url": "https://neoservices.me",
+  "telephone": "+91 8489914375",
+  "description": "AC, Fridge, Washing Machine and RO Service in Tirupur",
+  "priceRange": "₹99-₹20000"
+}
 </script>
+
