--- a/service-ac.html
+++ b/service-ac.html
@@ -66,7 +66,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://neoservices.me/">
     <meta property="og:title" content="Neo Services - Tirupur"> <!-- Favicon -->
-    <link rel="icon" href="assets/images/logo.png"> <!-- Google Fonts -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico"><!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -420,4 +421,5 @@
             });
         }
     });
+
 </script>
